Address review: bump version, List.of(), move brake check into pauseForSuicideWave
- plugin.json version bumped to 0.12.1 (0.12.0 was used by #159)
- BrakeActionDropdown.options() now uses List.of() to match the
  surrounding config style (Arrays import removed)
- attackTickModule() simplified to a single pauseForSuicideWave()
  call. The brake wave + brake action checks moved into an early
  return at the start of pauseForSuicideWave() itself.